compiler/noirc_frontend/src/tests/snapshots/noirc_frontend__tests__expand__expands_inherent_impl_method_with_own_where_clause.snap
---
source: compiler/noirc_frontend/src/tests/expand.rs
expression: expanded
---
trait Bar {

}

impl Bar for Field {

}

trait Baz {

}

impl Baz for Field {

}

struct Foo<T> {
    x: T,
}

impl<T> Foo<T> where T: Bar {
    fn convert<U>(self, _other: U) -> T where U: Baz {
        self.x
    }
}

fn main() {
    let foo: Foo<Field> = Foo::<Field> { x: 1_Field};
    let _: Field = foo.convert(2_Field);
}
