compiler/noirc_frontend/src/tests/snapshots/noirc_frontend__tests__expand__expands_inherent_impl_with_where_clause.snap
---
source: compiler/noirc_frontend/src/tests/expand.rs
expression: expanded
---
trait Bar {

}

impl Bar for Field {

}

struct Foo<T> {
    x: T,
}

impl<T> Foo<T> {
    fn get(self) -> T where T: Bar {
        self.x
    }
}

fn main() {
    let foo: Foo<Field> = Foo::<Field> { x: 1_Field};
    let _: Field = foo.get();
}
